Fixed swagger
